# hommage

./: LICENSE  README.md  hommage.cabal  stack.yaml
hommageexamples/: LICENSE  hommageexamples.cabal  stack.yaml
hommageexamples/run/: run.sh
hommageexamples/src/: Example1.hs  Example2.hs  Main.hs
src/Sound/: Hommage.hs
src/Sound/Hommage/: DFTFilter.hs  Envelope.hs  FFT.hs  Filter.hs  Midi.hs  Misc.hs  Notation.hs  Osc.hs  Play.hs  Rand.hs  Sample.hs  Seq.hs  Signal.hs  Sound.hs  Tools.hs  WavFile.hs  dft.c
