
name:                hommage
version:             0.0.8.0
synopsis:            hommage
description:         Haskell Offline Music Manipulation And Generation EDSL 
license:             BSD3
license-file:        LICENSE
author:              Daniel van den Eijkel
maintainer:          dvde@gmx.net
-- copyright:           
category:            Sound
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


library
  exposed-modules:    Sound.Hommage, 
                      Sound.Hommage.WavFile, 
                      Sound.Hommage.Misc, 
                      Sound.Hommage.Signal, 
                      Sound.Hommage.DFTFilter,
                      Sound.Hommage.Envelope
                      Sound.Hommage.FFT
                      Sound.Hommage.Filter
                      Sound.Hommage.Midi
                      Sound.Hommage.Notation
                      Sound.Hommage.Osc
                      Sound.Hommage.Play
                      Sound.Hommage.Rand
                      Sound.Hommage.Sample
                      Sound.Hommage.Seq
                      Sound.Hommage.Sound
                      Sound.Hommage.Tools

  -- other-modules:       
  -- other-extensions:    
  build-depends:       base, array, directory, random, time, process
  hs-source-dirs:      src
  default-language:    Haskell2010
  c-sources:           src/Sound/Hommage/dft.c

